# MaxairaQuant

./: .gitignore  README.md  etl_smoke.py  service_bak_core.md  开发需求.md
QuantService/: deploy_spec_ubuntu24_bt.md  develop.md  main.py  project_architecture.md  requirements.txt  test.py
QuantService/config/: app.yaml
QuantService/qs/bootstrap/: daemon.py
QuantService/qs/buffer/: buffer.py
QuantService/qs/cli/: commands.py
QuantService/qs/common/: types.py
QuantService/qs/config/: loader.py  schema.py
QuantService/qs/db/: client.py  queries.py  schema.py
QuantService/qs/gateways/: binance_rest.py  binance_ws.py
QuantService/qs/monitoring/: metrics.py
QuantService/qs/scheduler/: gap_heal.py
QuantService/qs/services/: base.py
QuantService/qs/services/backfill/: fetch.py  manager.py  rate_limiter.py
QuantService/qs/services/backtest/: engine.py
QuantService/qs/services/indicator/: offline.py  online.py
QuantService/qs/services/proxy/: registry.py
QuantService/qs/services/trading/: service.py
QuantService/qs/services/ws/: client_server.py  event_bus.py  supervisor.py  upstream.py
QuantStudio/: CMakeLists.txt  READM.md  WORKFLOW.md  vcpkg.json
QuantStudio/config/: app.yaml
QuantStudio/src/: main.cpp
QuantStudio/src/app/: App.cpp  App.h
QuantStudio/src/data/: DataStore.cpp  DataStore.h
QuantStudio/src/indicator/: IndicatorEngine.cpp  IndicatorEngine.h
QuantStudio/src/network/: WSClient.cpp  WSClient.h
QuantStudio/src/ui/: UIDemoDX11.cpp  UIDemoDX11.h
service_bak/: deploy.md  pom.xml
service_bak/data-collector/: pom.xml
service_bak/data-collector/src/main/java/com/maxaira/: DataCollectorApplication.java  OkHttpSocks5Test.java
service_bak/data-collector/src/main/java/com/maxaira/config/: ApplicationConfig.java  SchedulingConfig.java  TaskExecutorConfig.java  WebSocketServerConfig.java
service_bak/data-collector/src/main/java/com/maxaira/controller/: DataBufferController.java  TradingPairConfigController.java  WebSocketController.java
service_bak/data-collector/src/main/java/com/maxaira/model/: Kline.java  ProxyConfig.java  TradingPairConfig.java
service_bak/data-collector/src/main/java/com/maxaira/scheduler/: GapHealScheduler.java
service_bak/data-collector/src/main/java/com/maxaira/service/: ApiRateLimiter.java  BackfillService.java  BackfillTaskManager.java  DataBufferService.java  DatabaseService.java  HighWaterMarkRegistry.java  TradingPairConfigService.java  WebSocketService.java
service_bak/data-collector/src/main/java/com/maxaira/websocket/: ClientBroadcastService.java  ClientWebSocketHandler.java
service_bak/data-collector/src/main/resources/: application.yml  logback-spring.xml
